--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 2fr 1fr;
   grid-template-rows: repeat(3, 1fr);
-  width: 80%;
+  width: 70%;
 }
 
 .history-container {
@@ -13,4 +13,16 @@
 .formula-container {
   grid-row: 1 / 2;
   grid-column: 2 / 3;
+}
+
+.convert-container {
+  margin-bottom: 3%;
+}
+
+.input-container,
+.convert-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
 }
