--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,17 @@
+:root {
+  --system-ui: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+body {
+  font-family: var(--system-ui);
+  box-sizing: border-box;
+}
+
 .container {
   display: grid;
   grid-template-columns: 2fr 1fr;
   grid-template-rows: repeat(3, 1fr);
-  width: 70%;
 }
 
 .history-container {
