--- a/style/style.css
+++ b/style/style.css
@@ -15,17 +15,27 @@ body {
 .container {
   display: grid;
   grid-template-columns: 2fr 1fr;
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 200px);
+  gap: 1rem;
+  margin-top: 15%;
 }
 
 .history-container {
   grid-row: 2 / 3;
   grid-column: 2 / 3;
+  overflow: scroll;
 }
 
 .formula-container {
   grid-row: 1 / 2;
   grid-column: 2 / 3;
+}
+
+.history-container,
+.formula-container {
+  border: 1px solid var(--text-color);
+  border-radius: 5px;
+  padding: 2rem;
 }
 
 .convert-container {
@@ -55,10 +65,6 @@ input {
 
 select {
   height: 2rem;
-}
-
-option {
-  background-color: none;
 }
 
 .convert-btn {
